subiendo a gh-pages

--- a/index.html
+++ b/index.html
@@ -106,7 +106,19 @@
                 </div>
             </div>
         </div>
-        <img class="pastel" src="assets/img/bg-quote.jpg">
+    </section>
+    <section class="tercera">
+        <div class="seccion-tres">
+            <img class="pastel" src="assets/img/bg-quote.jpg">
+             <div class="row">
+                <div class="col-md-10 offset-md-1">
+                   <p>Truly great food is a combination of quality ingredients,creativity, and attention to detail.</p>
+                   <hr class="colored">
+                   <button>MEET OUR TEAM</button>
+                </div>
+            </div>
+            </div>
+        
     </section>
 
 	
